--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,6 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700");
 
-/*
-	Hielo by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-*/
-
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -1629,7 +1623,7 @@
 		}
 
 	body {
-		background-color: #fff;
+		background-color: #000;
 		color: #444;
 	}
 
@@ -4015,7 +4009,7 @@
 				top: 0;
 				left: 0;
 				background: #000;
-				opacity: 0.35;
+				opacity: 1.0;
 			}
 
 			.banner > article .inner {
@@ -4032,7 +4026,7 @@
 			.banner > article h2 {
 				font-size: 7rem;
 				margin-bottom: 0;
-				color: #FFF;
+				color: #000;
 				font-weight: 300;
 			}
 
